2009-03-15
	* Added extra newline patch, sf.net id #2638601 (thanks Ali)

2009-03-07
	* Added alias patch ( sf.net id #2663691 ) changed it to prevent it from
	overwriting existing environment variables and updated docs, syntaxfiles, ...

2009-03-01
	* Added if_updatenr
	* Rewrite human_readable() to minimise amount of padding
	* Fix padding in temp_print()
	* Fix padding of $processes and $running_processes

2009-02-17
	* Added $battery_short patch, sf.net id #2300911 (thanks Swoog)
	* Patch by Kim Holviala sf.net id #2484548:
		* change the height of execbar and execibar to be the same as other
		bars have by default (6 pixels)
		* treat mixer values as percentages as they're usually 0-100 (switch
		to spaced_print() with pad_percents)
		* change temp_print() from snprintf() to spaced_print()
		* remove decimals from temp_print() as none of the current sources can
		supply values smaller than 1 degree (C or F, doesn't matter)
		* fix number printing in human_readable()
		* network $upspeed and $downspeed now use human_readable()
	* Fix diskio_read/write patch sf.net id #2493084 (thanks Alexander)
	* Fix nvidia memory frequency reading patch sf.net id #2493134
	* Patch to clarify things in conky.conf sf.net id #2548805 (thanks
	Carpathia).
	* Fix shown battery status when the battery is not charging any more but
	is not full charged patch sf.net id #2556056 (thanks Martin)
	* Extended support for local Maildir patch sf.net id #2561323 (thanks
	Nicolas)
	* XMMS2 fix and refactoring patch sf.net id #2579357 (thanks Tamim)
	* Null mpd variables should have an empty string patch sf.net id #2564747

2009-02-15
	* Added out_to_x

2009-02-12
	* Added overwrite_file and append_file

2009-02-10
	* Added out_to_stderr

2009-02-08
	* Refactor top code, add top_time to sort by process cpu time (thanks
	sohalt).

2009-01-04
	* Drop --enable-smapi and use --enable-ibm instead
	* Make ibm-acpi objects optional (--enable-ibm)

2008-12-20